force-app/main/default/objects/Matter_Template__c/Matter_Template__c.object-meta.xml
<CustomObject>
    <label>Matter Template</label>
    <nameField>
        <label>Template Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>