force-app/main/default/objects/Matter_Template__c/fields/Acting_For__c.field-meta.xml
<CustomField>
    <fullName>Acting_For__c</fullName>
    <label>Acting For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchaser Only</fullName>
            </value>
            <value>
                <fullName>Seller Only</fullName>
            </value>
            <value>
                <fullName>Both (Dual Rep)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>