force-app/main/default/objects/Matter_Template__c/fields/Default_Legal_Fee_KES__c.field-meta.xml
<CustomField>
    <fullName>Default_Legal_Fee_KES__c</fullName>
    <label>Default Legal Fee (KES)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>