force-app/main/default/objects/Matter_Template__c/fields/Dual_Representation__c.field-meta.xml
<CustomField>
    <fullName>Dual_Representation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Representation</label>
    <type>Checkbox</type>
</CustomField>