force-app/main/default/objects/Matter_Template__c/fields/Fee_Basis__c.field-meta.xml
<CustomField>
    <fullName>Fee_Basis__c</fullName>
    <label>Fee Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Percentage of Property Value</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>