force-app/main/default/objects/Matter_Template__c/fields/Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fee_Percentage__c</fullName>
    <label>Fee Percentage</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>