force-app/main/default/objects/Matter_Template__c/fields/Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>Matter_Type__c</fullName>
    <label>Matter Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conveyancing Purchase</fullName>
            </value>
            <value>
                <fullName>Conveyancing Sale</fullName>
            </value>
            <value>
                <fullName>Conveyancing Transfer</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Sub-Division</fullName>
            </value>
            <value>
                <fullName>Charge/Mortgage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>