force-app/main/default/objects/Matter_Template__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conveyancing</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>